syntax = "proto3";

option java_package = "helloworld";
option java_outer_classname = "HelloProto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
